--- a/web-archive/assets/web-archive.css
+++ b/web-archive/assets/web-archive.css
@@ -60,9 +60,11 @@ td {
   left: 20px;
   background-color: snow;
   padding: 6px 12px;
-  border-radius: 50px;
+  border-radius: var(--border-rad);
   font-size: 1rem;
   font-family: sans-serif;
+  position: fixed;
+  z-index: 3;
 }
 
 #back {
