--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -42,6 +42,11 @@
   } */
 
   .second {
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(2, 1fr);
+    margin: 30px 30px 50px 30px;
+  }
+
+  .center {
+    justify-content: start;
   }
 }
