--- a/para-dani/assets/style.css
+++ b/para-dani/assets/style.css
@@ -7,7 +7,51 @@
 
 body {
     background-color: beige;
+    overflow: hidden;
 }
+
+
+
+.mail {
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    background-color: red;
+    z-index: 999;
+}
+
+#top {
+    height: 100%;
+    width: 100%;
+    top: 0;
+    position: fixed;
+    z-index: 998;
+    
+}
+
+#bottom {
+    height: 100%;
+    width: 100%;
+    top: 0;
+    position: fixed;
+    z-index: 997;
+
+}
+
+
+.paraArriba {
+    bottom: 100vh;
+}
+
+.paraAbajo {
+    top: 100vh;
+}
+
+
+
+
+
+
 
 .windows {
     display: grid;
@@ -181,9 +225,7 @@ body {
         left: calc(50vw * 0);
         top: calc(60vh * 7);
     }
-    
-
-
 
 
   }
+
