--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -43,7 +43,7 @@
 
   .second {
     grid-template-columns: repeat(2, 1fr);
-    margin: 30px 30px 50px 30px;
+    padding: 30px 30px 50px 30px;
   }
 
   .center {
