--- a/para-dani/assets/style.css
+++ b/para-dani/assets/style.css
@@ -2,23 +2,16 @@
 
     --spacing: 15px;
     --transition: all .4s ease-in-out;
+    --transitionS: all .8s ease-in-out;
+    --transitionL: all 1.3s ease-in-out;
 
 }
 
 body {
-    background-color: beige;
-    overflow: hidden;
+    background-color: BLACK;
+    overflow-x: hidden;
 }
 
-
-
-.mail {
-    height: 100vh;
-    width: 100vw;
-    position: fixed;
-    background-color: red;
-    z-index: 999;
-}
 
 #top {
     height: 100%;
@@ -26,7 +19,7 @@ body {
     top: 0;
     position: fixed;
     z-index: 998;
-    
+    transition: var(--transitionS);   
 }
 
 #bottom {
@@ -35,36 +28,50 @@ body {
     top: 0;
     position: fixed;
     z-index: 997;
-
+    transition: var(--transitionL); 
 }
 
 
 .paraArriba {
-    bottom: 100vh;
+    height: 0 !important;
+    transition: var(--transitionS);   
 }
 
 .paraAbajo {
-    top: 100vh;
+    top: 100vh !important;
+    transition: var(--transitionL); 
 }
 
-
-
-
-
+.normal {
+    margin-top: 0px !important;
+    scale: 1 !important;
+    transition: var(--transitionL); 
+}
 
 
 .windows {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 0;
+    margin-top: 100px;
+    scale: .9;
+    transition: var(--transitionL);
+    background-color: rgb(154, 154, 154);
+    border-radius: 20px;
 }
 
 .windows div {
-    border: 1px solid white;
+    /*! border: 1px solid white; */
     height: 50vh;
     width: 25vw;
     box-sizing: border-box;
     padding: var(--spacing);
+    border-radius: 100%;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .windows img, video {
@@ -78,6 +85,7 @@ body {
 
     filter: blur(10px);
     transition: var(--transition);
+    border-radius: 50%;
 }
 
 #un{
@@ -128,17 +136,16 @@ body {
     padding: 0;
     z-index: 2;
     position: relative;
-    color: blue;
+    color: beige;
 
     opacity: 1;
     transition: var(--transition);
 
     /*! filter: invert(1); */
-    mix-blend-mode: multiply;
 
     font-family: sans-serif;
     font-weight: 900;
-    text-shadow: 0px 0 6px beige;
+    text-shadow: 0px 0 10px beige;
 }
 
 
