--- a/para-dani/assets/style.css
+++ b/para-dani/assets/style.css
@@ -3,39 +3,65 @@
     --spacing: 15px;
     --transition: all .4s ease-in-out;
     --transitionS: all .8s ease-in-out;
-    --transitionL: all 1.3s ease-in-out;
+    --transitionL: all 2s ease-in-out;
+    --transitionM: all 1.5s ease-in-out;
 
 }
 
 body {
     background-color: BLACK;
-    overflow-x: hidden;
+    overflow: hidden;
+    font-family: sans-serif;
+    font-weight: 500;
+    text-shadow: 0px 0 10px rgba(245, 245, 220, 0.500);
+    color: beige;
+
+    opacity: 1;
 }
 
-
-#top {
-    height: 100%;
-    width: 100%;
-    top: 0;
-    position: fixed;
-    z-index: 998;
-    transition: var(--transitionS);   
+a {
+    color: blue;
 }
 
-#bottom {
-    height: 100%;
-    width: 100%;
-    top: 0;
+#abrir:hover {
+    cursor: pointer;
+    transform: scale(1.1) !important;
+}
+
+#abrir {
+    animation: tilt-n-move-shaking 0.4s infinite;
+    width: fit-content;
+  }
+  
+  @keyframes tilt-n-move-shaking {
+    0% { transform: translate(0, 0) rotate(0deg); }
+    25% { transform: translate(5px, 5px) rotate(5deg); }
+    50% { transform: translate(0, 0) rotate(0eg); }
+    75% { transform: translate(-5px, 5px) rotate(-5deg); }
+    100% { transform: translate(0, 0) rotate(0deg); }
+  }
+  
+
+
+.bottom {
+    height: 95vh;
+    width: 100vw;
+    top: 5vh;
     position: fixed;
     z-index: 997;
-    transition: var(--transitionL); 
+    border-radius: 40px 40px 0 0;
+    background-color: gainsboro;
+    transition: var(--transitionL);
+    padding: 30px;
+    color: gray;
+    box-sizing: border-box;
 }
 
-
-.paraArriba {
-    height: 0 !important;
-    transition: var(--transitionS);   
+#sender {
+    position: absolute;
+    bottom: 10px;
 }
+
 
 .paraAbajo {
     top: 100vh !important;
@@ -43,19 +69,17 @@ body {
 }
 
 .normal {
-    margin-top: 0px !important;
     scale: 1 !important;
-    transition: var(--transitionL); 
-}
+    transition: var(--transitionM);   
 
+}
 
 .windows {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 0;
-    margin-top: 100px;
-    scale: .9;
-    transition: var(--transitionL);
+    scale: .95;
+    transition: var(--transitionM);   
     background-color: rgb(154, 154, 154);
     border-radius: 20px;
 }
@@ -79,7 +103,7 @@ body {
     width: 25vw;
     object-fit: cover;
     position: absolute;
-    z-index: 1;
+    z-index: 2;
     top: 0;
     left: 0;
 
@@ -131,21 +155,30 @@ body {
 
 
 
-.windows p {
+.windows p, span {
     margin: 0 0 var(--spacing) 0;
     padding: 0;
-    z-index: 2;
+    z-index: 3;
     position: relative;
-    color: beige;
 
-    opacity: 1;
     transition: var(--transition);
 
     /*! filter: invert(1); */
 
-    font-family: sans-serif;
-    font-weight: 900;
-    text-shadow: 0px 0 10px beige;
+
+}
+
+span {
+    font-weight: 100;
+    border: 1px solid beige;
+    border-radius: 50%;
+    font-size: 90%;
+    height: 20px;
+    padding: 1px 2px;
+    min-width: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 
@@ -174,13 +207,60 @@ body {
     transition: var(--transition);
 }
 
+.windows div:hover > span {
+    opacity: 0 !important;
+    transition: var(--transition);
+}
+
+
+.firma{
+    right: 10px;
+    bottom: 2px;
+    max-width: 95%;
+    position: fixed;
+    z-index: 1000;
+    width: max-content;
+    z-index: 2;
+    display: flex;
+    opacity: 0;
+    transition: var(--transition);
+
+}
+
+.show{
+    opacity: 1;
+    transition: var(--transition);
+
+}
+
+.firma p {
+    margin: 0;
+    color: black;
+}
+
+
+#ocho:hover{
+    cursor:pointer;
+}
+
 
 @media (max-width: 650px) {
     /* … */
 
+    body {
+        overflow-x: hidden;
+        overflow-y: scroll;
+    }
+
+    .bottom {
+        height: 90vh;
+        top: 10vh;
+    }
+
     .windows {
         grid-template-columns: repeat(1, 1fr);
         gap: 0;
+        scale: 0.97;
       }
       
     .windows div {
