--- a/twenty-six-hour-a-day/style.css
+++ b/twenty-six-hour-a-day/style.css
@@ -2,6 +2,7 @@ body{
     margin: 0;
     padding: 0;
     background-color: black;
+    overflow: hidden;
   }
 
   #link {
@@ -11,7 +12,7 @@ body{
     transform: translateX(-50%);
 
     color: grey;
-    font-size: 80%;
+    font-size: 70%;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-decoration: none;
 
@@ -31,28 +32,44 @@ body{
     }
   }
 
-  .video{
+  .theme{
+    width: 100vw;
+    height: 100vh;
+    top: 0; left: 0;
+    position: fixed;
+    opacity: .3;
+    background-color: transparent;
+    z-index: 2;
+  }
+
+  .rot{
     height: 200vh;
     width: 200vw;
     position: fixed;
     left: -50vw;
     top: -50vh;
     z-index: 1;
-    -webkit-clip-path: circle(50% at 50% 50%);
+    -webkit-clip-path: circle(45vw at 50% 50%);
     clip-path: circle(45vw at 50% 50%);
+  }
+
+  .video{
+    height: 100%;
+    width: 100%;
   }
   
 
+
 @media screen and (min-width: 1000px) {
 
-    .video {
-    height: 90vh;
-    width: 90vw;
+    .rot {
+    height: 80vh;
+    width: 80vw;
     position: fixed;
-    left: 5vw;
-    top: 5vh;
+    left: 10vw;
+    top: 7vh;
     z-index: 1;
-    -webkit-clip-path: circle(50% at 50% 50%);
+    -webkit-clip-path: circle(20vw at 50% 50%);
     clip-path: circle(20vw at 50% 50%);
     }
 
