--- a/sunday-sites/making-notes/assets/style.css
+++ b/sunday-sites/making-notes/assets/style.css
@@ -136,7 +136,7 @@ button:hover{
   animation: sunset 5s ease-in;
   animation-delay: 0ms;
 
-  background-image: url(../cloud.png);
+  /* background-image: url(../cloud.png); */
   height: 200px;
   width: 400px;
   background-position: center;
