--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'rubikregular';
-    src: url('../fonts/rubik-regular-webfont.woff2') format('woff2'),
-         url('../fonts/rubik-regular-webfont.woff') format('woff');
+    src: url('../fonts/Inter/rubik-regular-webfont.woff2') format('woff2'),
+         url('../fonts/Inter/rubik-regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap
@@ -9,8 +9,8 @@
 
 @font-face {
     font-family: 'rubikbold';
-    src: url('../fonts/rubik-bold-webfont.woff2') format('woff2'),
-         url('../fonts/rubik-bold-webfont.woff') format('woff');
+    src: url('../fonts/Inter/rubik-bold-webfont.woff2') format('woff2'),
+         url('../fonts/Inter/rubik-bold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap
@@ -18,11 +18,163 @@
 
 @font-face {
     font-family: 'rubikitalic';
-    src: url('../fonts/rubik-italic-webfont.woff2') format('woff2'),
-         url('../fonts/rubik-italic-webfont.woff') format('woff');
+    src: url('../fonts/Inter/rubik-italic-webfont.woff2') format('woff2'),
+         url('../fonts/Inter/rubik-italic-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap
 }
 
 
+@font-face {
+    font-family: 'Inter';
+    font-style:  normal;
+    font-weight: 100;
+    font-display: swap;
+    src: url("../fonts/Inter/Inter-Thin.woff2") format("woff2"),
+         url("../fonts/Inter/Inter-Thin.woff") format("woff");
+  }
+  @font-face {
+    font-family: 'Inter';
+    font-style:  italic;
+    font-weight: 100;
+    font-display: swap;
+    src: url("../fonts/Inter/Inter-ThinItalic.woff2") format("woff2"),
+         url("../fonts/Inter/Inter-ThinItalic.woff") format("woff");
+  }
+  
+  @font-face {
+    font-family: 'Inter';
+    font-style:  normal;
+    font-weight: 200;
+    font-display: swap;
+    src: url("../fonts/Inter/Inter-ExtraLight.woff2") format("woff2"),
+         url("../fonts/Inter/Inter-ExtraLight.woff") format("woff");
+  }
+  @font-face {
+    font-family: 'Inter';
+    font-style:  italic;
+    font-weight: 200;
+    font-display: swap;
+    src: url("../fonts/Inter/Inter-ExtraLightItalic.woff2") format("woff2"),
+         url("../fonts/Inter/Inter-ExtraLightItalic.woff") format("woff");
+  }
+  
+  @font-face {
+    font-family: 'Inter';
+    font-style:  normal;
+    font-weight: 300;
+    font-display: swap;
+    src: url("../fonts/Inter/Inter-Light.woff2") format("woff2"),
+         url("../fonts/Inter/Inter-Light.woff") format("woff");
+  }
+  @font-face {
+    font-family: 'Inter';
+    font-style:  italic;
+    font-weight: 300;
+    font-display: swap;
+    src: url("../fonts/Inter/Inter-LightItalic.woff2") format("woff2"),
+         url("../fonts/Inter/Inter-LightItalic.woff") format("woff");
+  }
+  
+  @font-face {
+    font-family: 'Inter';
+    font-style:  normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url("../fonts/Inter/Inter-Regular.woff2") format("woff2"),
+         url("../fonts/Inter/Inter-Regular.woff") format("woff");
+  }
+  @font-face {
+    font-family: 'Inter';
+    font-style:  italic;
+    font-weight: 400;
+    font-display: swap;
+    src: url("../fonts/Inter/Inter-Italic.woff2") format("woff2"),
+         url("../fonts/Inter/Inter-Italic.woff") format("woff");
+  }
+  
+  @font-face {
+    font-family: 'Inter';
+    font-style:  normal;
+    font-weight: 500;
+    font-display: swap;
+    src: url("../fonts/Inter/Inter-Medium.woff2") format("woff2"),
+         url("../fonts/Inter/Inter-Medium.woff") format("woff");
+  }
+  @font-face {
+    font-family: 'Inter';
+    font-style:  italic;
+    font-weight: 500;
+    font-display: swap;
+    src: url("../fonts/Inter/Inter-MediumItalic.woff2") format("woff2"),
+         url("../fonts/Inter/Inter-MediumItalic.woff") format("woff");
+  }
+  
+  @font-face {
+    font-family: 'Inter';
+    font-style:  normal;
+    font-weight: 600;
+    font-display: swap;
+    src: url("../fonts/Inter/Inter-SemiBold.woff2") format("woff2"),
+         url("../fonts/Inter/Inter-SemiBold.woff") format("woff");
+  }
+  @font-face {
+    font-family: 'Inter';
+    font-style:  italic;
+    font-weight: 600;
+    font-display: swap;
+    src: url("../fonts/Inter/Inter-SemiBoldItalic.woff2") format("woff2"),
+         url("../fonts/Inter/Inter-SemiBoldItalic.woff") format("woff");
+  }
+  
+  @font-face {
+    font-family: 'Inter';
+    font-style:  normal;
+    font-weight: 700;
+    font-display: swap;
+    src: url("../fonts/Inter/Inter-Bold.woff2") format("woff2"),
+         url("../fonts/Inter/Inter-Bold.woff") format("woff");
+  }
+  @font-face {
+    font-family: 'Inter';
+    font-style:  italic;
+    font-weight: 700;
+    font-display: swap;
+    src: url("../fonts/Inter/Inter-BoldItalic.woff2") format("woff2"),
+         url("../fonts/Inter/Inter-BoldItalic.woff") format("woff");
+  }
+  
+  @font-face {
+    font-family: 'Inter';
+    font-style:  normal;
+    font-weight: 800;
+    font-display: swap;
+    src: url("../fonts/Inter/Inter-ExtraBold.woff2") format("woff2"),
+         url("../fonts/Inter/Inter-ExtraBold.woff") format("woff");
+  }
+  @font-face {
+    font-family: 'Inter';
+    font-style:  italic;
+    font-weight: 800;
+    font-display: swap;
+    src: url("../fonts/Inter/Inter-ExtraBoldItalic.woff2") format("woff2"),
+         url("../fonts/Inter/Inter-ExtraBoldItalic.woff") format("woff");
+  }
+  
+  @font-face {
+    font-family: 'Inter';
+    font-style:  normal;
+    font-weight: 900;
+    font-display: swap;
+    src: url("../fonts/Inter/Inter-Black.woff2") format("woff2"),
+         url("../fonts/Inter/Inter-Black.woff") format("woff");
+  }
+  @font-face {
+    font-family: 'Inter';
+    font-style:  italic;
+    font-weight: 900;
+    font-display: swap;
+    src: url("../fonts/Inter/Inter-BlackItalic.woff2") format("woff2"),
+         url("../fonts/Inter/Inter-BlackItalic.woff") format("woff");
+  }
