--- a/objets-bg/assets/style.css
+++ b/objets-bg/assets/style.css
@@ -13,13 +13,38 @@ body {
     font-family: "Inter";
     margin: var(--spacingS);
     font-weight: 600;
+    padding-bottom: 100px;
 }
 
-p{
+html {
+    scroll-behavior: smooth;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
+
+html::-webkit-scrollbar {
+    display: none;
+}
+
+p {
     margin: 0;
     padding: 0;
 }
 
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+a:hover{
+    text-decoration: underline;
+}
+
+a:visited{
+    color: inherit;
+}
+
+/*************** BACKGROUND ****************/
 #back{
     width: 90vw;
     height: 90vh;
@@ -37,6 +62,7 @@ p{
     filter: blur(10px);
 }
 
+/*************** BUTTONS ****************/
 .buttons{
     display: flex;
     width: 100%;
@@ -55,13 +81,11 @@ button {
 
 #credits{
     box-shadow: none;
-
 }
 
 button:nth-child(odd){
     box-shadow: 0 0 10px 0px var(--vertBG);
 }
-
 
 button:nth-child(even){
     box-shadow: 0 0 10px 0px var(--rougeBG);
@@ -76,9 +100,10 @@ button:hover, button:active{
 }
 
 
+/*************** GRID ****************/
 .grid {
     display: grid;
-    grid-template-columns: repeat(5, auto);
+    grid-template-columns: repeat(4, auto);
     row-gap: var(--spacingS);
     column-gap: var(--spacingS);
     position: relative;
@@ -87,17 +112,11 @@ button:hover, button:active{
     justify-content: flex-start;
 }
 
-/* .object:nth-last-of-type(1){
-    display: flex;
-    align-items: center;
-    justify-content: center;
-} */
-
 .object {
     border: 1px solid gainsboro;
 
     width: 100%;
-    max-width: calc(100vw/5);
+    max-width: calc(100vw/4);
 
     height: auto;
     border-radius: 20px;
@@ -130,19 +149,21 @@ button:hover, button:active{
   }
 
 
+/*************** CARDS ****************/
 .title {
     font-family: "Inter";
     font-weight: 600;
     margin-bottom: var(--spacingS);
     font-size: 1.2rem;
     text-transform: uppercase;
+
+    
 }
 
 .imagen {
     width: 100%;
     min-height: 250px;
-    height: fit-content;
-    object-fit: cover;
+    object-fit: contain;
     border-radius: 20px;
     aspect-ratio: 4/3;
 }
@@ -157,21 +178,26 @@ button:hover, button:active{
     width: 100%;
     margin-top: var(--spacingS);
     font-weight: 600;
-    font-size: 1rem;
+    font-size: 1.2rem;
 }
 
+
+/*************** CALCUL TIME ****************/
 .calculs {
     position: fixed;
-    right: var(--spacingS);
-    bottom: var(--spacingS);
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: var(--spacingM);
     z-index: 9;
     padding: 12px 16px;
     border-radius: 20px;
     color: black;
     background-color: rgba(255, 255, 255, 0.8);
-    box-shadow: 0 0 20px 10px white;
+    box-shadow: 0 0 20px 10px #0000002b;
     backdrop-filter: blur(4px);
     font-weight: 400;
+    font-size: 1.3rem;
+    width: max-content;
     transition: all .5s ease-in-out;
 
     animation: box 3s ease-in-out;
@@ -180,71 +206,22 @@ button:hover, button:active{
     animation-direction: alternate;
 }
 
-
 .calculs:hover{
-    background-color: black;
     box-shadow: 0 0 20px 10px black;
-
-    color:  white;
+    background-color: black;
+    color: white;
     transition: all .5s ease-in-out;
     cursor: pointer;
 }
-
 
 .hide{
     opacity: 0 !important;
     display: none !important;
-}
-
-
-.intro {
-    width: calc(100% - var(--spacingS) * 2);
-    height: calc(100% - var(--spacingS) * 2);
-    position: fixed;
-    margin: var(--spacingS);
-    background-color: white;
-    box-shadow: 0 0 20px 10px gainsboro;
-    box-sizing: border-box;
-    top: 0;
-    left: 0;
-    z-index: 10;
-    border-radius: 20px;
-    padding: 50px;
-    font-size: 1.5rem;
-    opacity: 1;
-    transition: all .5s ease-in-out;
-}
-
-.startBack{
-    opacity: 0;
-    transition: all .5s ease-in-out;
-}
-
-.intro > p {
-    margin-bottom: var(--spacingM);
-}
-
-.buttonBig{
-    font-family: "Inter";
-    font-size: 1.5rem;
-    font-weight: 200;
-    border-radius: 50px;
-    padding: 8px 12px;
     transition: all .3s ease-in-out;
 }
 
 
-.buttonBig:hover {
-    cursor: pointer;
-    font-style: italic;
-    transition: all .3s ease-in-out;
-}
-
-.intro > span {
-    border: 1px solid black;
-}
-
-
+/*************** OUTRO ****************/
 .outro {
     width: calc(100% - 10px * 2);
     height: calc(100% - 10px * 2);
@@ -252,21 +229,19 @@ button:hover, button:active{
     margin: 10px;
     background-color: black;
     color: white;
-    box-shadow: 0 0 20px 10px black;
+    box-shadow: 0 0 20px 20px black;
     box-sizing: border-box;
     top: 0;
     left: 0;
     z-index: 10;
     border-radius: 20px;
     padding: 50px;
-    font-size: 1.5rem;
     opacity: 1;
     display: block;
     transition: all .5s ease-in-out;
 
     animation: ease 1s ease-in-out;
 }
-
 
 .outroBack{
     opacity: 0 !important;
@@ -275,10 +250,70 @@ button:hover, button:active{
 }
 
 .outro > p {
-    margin-bottom: var(--spacingM);
+    margin-bottom: calc(var(--spacingM) * 2);
+    font-size: 5rem;
+    font-weight: 300;
+    width: 90%;
 }
 
-.outro span {
-    border: 1px solid white;
+.buttonBig{
+    font-family: "Inter";
+    font-size: 1rem;
+    font-weight: 300;
+    border-radius: 25px;
+    padding: 8px 12px;
+    transition: all .3s ease-in-out;
+
+    font-weight: 400;
+    font-size: 2rem;
+
+    background-color: white;
+    color: black;
+    box-shadow: 0 0 10px 5px white;
+}
+
+.buttonBig:hover {
+    cursor: pointer;
+    transition: all .3s ease-in-out;
+}
+
+.restart:hover {
+    box-shadow: 0 0 10px 5px var(--rougeBG);
+}
+
+.replay:hover {
+    box-shadow: 0 0 10px 5px var(--vertBG);
+}
+
+#monex{
+    position: absolute;
+    bottom: var(--spacingM);
+    font-weight: 400;
+    font-size: 1rem;
+}
+
+/*************** README ****************/
+#readme {
+    position: absolute;
+    text-align: left;
+    box-shadow: 0 0 20px 10px black;
+    background-color: black;
     color: white;
+    border-radius: 20px;
+    line-height: 1.3;
+    transition: all .3s ease-in-out;
+}
+
+#readme:hover {
+    cursor: auto;
+}
+
+.red {
+    color: var(--rougeBG);
+    font-style: italic;
+    font-family: "dt_world_tour_regular";
+}
+
+.vert {
+    color: var(--vertBG);
 }
