--- a/bg/assets/style.css
+++ b/bg/assets/style.css
@@ -14,6 +14,7 @@ body {
     margin: var(--spacingS);
     font-weight: 600;
     padding-bottom: 100px;
+    background-color: black;
 }
 
 html {
@@ -81,6 +82,13 @@ button {
 
 #credits{
     box-shadow: none;
+    background-color: black;
+    color: white;
+}
+
+#credits:hover{
+    background-color: white;
+    color: black;
 }
 
 button:nth-child(odd){
@@ -126,7 +134,7 @@ button:hover, button:active{
     justify-content: space-between;
     box-sizing: border-box;
 
-    background-color: transparent;
+    background-color: #ffffffe8;
     backdrop-filter: blur(4px);
 
     box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2);
@@ -191,9 +199,9 @@ button:hover, button:active{
     z-index: 9;
     padding: 12px 16px;
     border-radius: 20px;
-    color: black;
-    background-color: rgba(255, 255, 255, 0.8);
-    box-shadow: 0 0 20px 10px #0000002b;
+    color: white;
+    background-color: black;
+    box-shadow: 0 0 20px 10px black;
     backdrop-filter: blur(4px);
     font-weight: 400;
     font-size: 1.3rem;
@@ -207,7 +215,7 @@ button:hover, button:active{
 }
 
 .calculs:hover{
-    box-shadow: 0 0 20px 10px black;
+    box-shadow: 0 0 20px 10px white;
     background-color: black;
     color: white;
     transition: all .5s ease-in-out;
@@ -296,9 +304,9 @@ button:hover, button:active{
 #readme {
     position: absolute;
     text-align: left;
-    box-shadow: 0 0 20px 10px black;
-    background-color: black;
-    color: white;
+    box-shadow: 0 0 20px 10px white;
+    background-color: white;
+    color: black;
     border-radius: 20px;
     line-height: 1.3;
     transition: all .3s ease-in-out;
