--- a/lyrics/style.css
+++ b/lyrics/style.css
@@ -2,8 +2,8 @@
 @import url("../assets/css/normalize.css");
 
 
-:root{
-    --lines:violet;
+:root {
+    --lines: violet;
     --background: aliceblue;
     --high: gainsboro;
 }
@@ -14,20 +14,23 @@ body {
 }
 
 .blocks {
-    min-height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
+    width: 100vw;
     display: grid;
-    grid-template-columns: repeat(2, auto);
+    grid-template-columns: repeat(2, 1fr);
 }
 
 a {
     color: black;
     text-decoration: none;
     transition: all .3s ease-in-out;
+    height: 100%;
+    width: 100%;
 }
 
 a:visited {
     color: black;
-} 
+}
 
 a:hover {
     text-decoration: underline;
@@ -54,7 +57,7 @@ h3 {
 }
 
 p {
-    white-space: pre-line;   
+    white-space: pre-line;
 }
 
 span {
@@ -66,6 +69,8 @@ span {
     border-width: 0px 1px 1px 0px;
     color: black;
     padding: 12px 8px;
+    height: 100%;
+    box-sizing: border-box;
 }
 
 
@@ -80,20 +85,12 @@ span {
     padding: 36px 24px;
     width: 100%;
     max-width: 600px;
+    box-sizing: border-box;
 }
 
-.song h1{
-    font-size: 130%;
-}
+.mini-blocks {}
 
-.song h2{
-    font-size: 150%;
-}
-
-.mini-blocks {
-}
-
-.mini-block{
+.mini-block {
     width: 100px;
     height: 100px;
     margin: 0;
@@ -103,7 +100,10 @@ span {
     transition: all .3s ease-in-out;
 }
 
-.block:hover, .mini-block:hover, .block:active, .mini-block:active{
+.block:hover,
+.mini-block:hover,
+.block:active,
+.mini-block:active {
     background-color: var(--high);
     transition: all .3s ease-in-out;
 
@@ -120,3 +120,24 @@ span {
     font-size: 80%;
 }
 
+
+@media screen and (max-width: 650px) {
+
+    .songContent {
+        flex-direction: column;
+    }
+
+    .mini-block {
+        width: 50vw;
+        box-sizing: border-box;
+    }
+
+    .mini-blocks {
+        display: grid;
+        grid-template-columns: repeat(2, auto);
+        width: 100%;
+        box-sizing: border-box;
+
+    }
+
+}
