--- a/assets/css/addons.css
+++ b/assets/css/addons.css
@@ -8,15 +8,22 @@ SCREEN NIGHT
   top: 0; left: 0;
   position: fixed;
   z-index: 999;
-  display: grid;
   color: snow;
   align-items: center;
-  text-align: center;
+  justify-content: center;
   display: none;
+  font-size: 2rem;
+}
+
+#screen-night p{
+  border: 1px solid snow;
+  border-radius: var(--radius-hard);
+  width: fit-content;
+  padding: 4px var(--spacing-s) 2px var(--spacing-s);
 }
 
 .itsnight{
-  display: grid !important;
+  display: flex !important;
 }
 
 
@@ -26,7 +33,7 @@ MAIL STUFF
 #mailcopied{
   height: auto;
   background: hsl(0, 0%, 97%);
-  border-radius: 0 0 var(--border-rad) var(--border-rad);
+  border-radius: 0 0 var(--radius-hard) var(--radius-hard);
   padding: 13px var(--spacing-s) var(--spacing-s) var(--spacing-s);
   z-index: 1;
   width: 80%;
@@ -35,7 +42,7 @@ MAIL STUFF
   transform: translateY(-100%);
   position: relative;
   color: black;
-  font-size: 80%;
+  font-size: var(--font-normal);
   z-index: 1;
   }
 
@@ -50,42 +57,6 @@ MAIL STUFF
   transition: all .5s ease-in-out;
 }
 
-
-/* -----------------------------------
-CONTROLS
--------------------------------------- */
-.controls {
-  height: auto;
-  display: grid;
-  grid-template-columns: auto auto;
-  grid-column-start: 1;
-  grid-column-end: 5;
-  justify-content: space-between;
-  align-items: center;
-  padding: 14px 20px;
-  color: var(--thisColor);
-  position: sticky;
-  top: 0;
-  z-index: 2;
-  background-color: var(--projectsBack);
-  border-bottom: 1px solid var(--thisColor);
-  /*! border-radius: var(--border-rad) var(--border-rad) 0 0; */
-}
-
-.controls > div > div > span {
-  margin-right: 8px;
-}
-
-.controls div {
-  display: flex;
-  align-items: center;
-}
-
-.controls-filtre {
-  display: flex;
-  column-gap: 20px;
-  color: var(--thisColor);
-}
 
 /* -----------------------------------
 SWITCHER
