--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -1,5 +1,4 @@
-
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 800px) {
 
   html {
     font-size: 1rem;
@@ -9,61 +8,30 @@
   .year-selector {
     display: none;
   }
-  
+
   .card {
     font-size: 1rem;
     width: 80vw;
   }
-  .card-text img{
+
+  .card-text img {
     max-height: 60px;
     max-width: 60px;
     margin: var(--spacing-s) var(--spacing-s) var(--spacing-s) 0;
   }
-  .card-text p{
+
+  .card-text p {
     margin: var(--spacing-s) 10px var(--spacing-s) var(--spacing-s);
   }
 
-  .moreBottom {
-  font-size: 2rem;
-  height: 50px;
-  width: calc(100% - 40px);
-  border-radius: 10px;
+  .second {
+    grid-template-columns: repeat(1, 1fr);
+    padding: 70px 40px 40px 40px;
+  }
 
-}
-/* 
   .projects {
-    grid-template-columns: repeat(2, 1fr);
+    height: fit-content;
+    margin-bottom: 40px;
   }
-
-  .projects-hide {
-    display: none !important;
-    transition: opacity .3s ease-in-out, visibility 1s ease-in-out;
-  }
-
-  .controls {
-    grid-template-columns: 1fr !important;
-    grid-gap: 20px;
-  }
-
-  .col2, .col3, .col4 {
-    grid-template-columns: 1fr !important;
-  } */
-
-  .second {
-    grid-template-columns: repeat(2, 1fr);
-    padding: 30px 30px 50px 30px;
-  }
-
-  .center {
-    justify-content: start;
-  }
-}
-
-@media screen and (max-width: 350px) {
-
-  .second {
-  grid-template-columns: repeat(1, 1fr);
-  padding: 30px 30px 50px 30px;
-}
 
 }
