--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
   --spacing-s: 17px;
 
   --white: snow;
+  --highlight: rgb(203, 203, 203);
   --dark: dimgray;
 
   --radius-soft: 10px;
@@ -62,6 +63,15 @@ a:hover {
   color: inherit;
 }
 
+h3 {
+  margin: 5px;
+  color: var(--highlight);
+  text-align: center;
+}
+
+p {
+  margin-bottom: var(--spacing-s);
+}
 
 /* -----------------------------------
 SCREEN HOME
@@ -72,8 +82,8 @@ SCREEN HOME
   z-index: 2;
   position: relative;
   backdrop-filter: blur(10px) saturate(100%);
-background-color: rgba(255, 255, 255, 0.8);
-  /* margin-bottom: 100vh; */
+  background-color: #fffafa69;
+  margin-bottom: 100vh;
 }
 
 .middle {
@@ -101,41 +111,53 @@ MENU
   display: flex;
   align-items: center;
 
+  /* display: none; */
 }
 
 #circle {
-  background-color: greenyellow;
+  background-color: var(--thisColor);
   height: 45px;
   width: 45px;
   border-radius: 100%;
-  box-shadow: 0 0 20px rgba(172, 255, 47, 0.5);
+  box-shadow: 0 0 10px var(--thisColor);
   z-index: 3;
-animation: energy 3s ease-in-out;
-animation-direction: alternate;
-animation-iteration-count: infinite;
-animation-delay: 0ms;
+
+  animation: energy 3s ease-in-out;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+  animation-delay: 0ms;
+
 }
 
 @keyframes energy {
-0% {
-  transform: scale(.9);
-}
-100% {
-  transform: scale(1.1);
-}
+  0% {
+    box-shadow: 0 0 0px var(--thisColor);
+  }
+
+  100% {
+    box-shadow: 0 0 30px var(--thisColor);
+  }
 }
 
 
-#circle img {
+#meCircle {
+  opacity: 0;
+  transform: rotate(-120deg);
+  height: 101%;
+  width: 101%;
   border-radius: 100%;
-  box-shadow: 0 0 20px hsla(0, 0%, 0%, 0.2);
-  height: 45px;
-  width: 45px;
-  width: auto;
+  transition: all .5s cubic-bezier(.55,0,.07,1);;
+
+}
+
+.circling {
+  opacity: 1 !important;
+  transform: rotate(0deg) !important;
+  transition: all .5s cubic-bezier(.55,0,.07,1);;
 }
 
 .menu span {
-  padding: 8px var(--spacing-s)  8px  calc(var(--spacing-s) + 10px);
+  padding: 8px var(--spacing-s) 8px calc(var(--spacing-s) + 10px);
   font-size: var(--font-small);
 
   margin-left: -17px;
@@ -143,7 +165,7 @@ animation-delay: 0ms;
   background-color: snow;
   border-radius: var(--radius-soft);
 
-  box-shadow: 0 0 20px hsla(0, 0%, 0%, 0.2);
+  box-shadow: 0 0 20px var(--highlight);
 
   z-index: 2;
 }
@@ -239,64 +261,130 @@ CARD STUFF
 }
 
 
+
+/* -----------------------------------
+NOW
+-------------------------------------- */
+.now {
+  padding: var(--spacing-s);
+  max-width: 510px;
+}
+
+.now a {
+  border: 1px dotted var(--highlight);
+  border-radius: 500px;
+  padding: 3px 5px;
+  transition: all .3s ease-in-out;
+}
+
+.now a:hover {
+  cursor: ne-resize;
+  color: black;
+  background-color: var(--highlight);
+}
+
 /* -----------------------------------
 PROJETS HOME
 -------------------------------------- */
 
 .second {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  column-gap: 60px;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 40px;
   row-gap: 50px;
   z-index: 1;
-  padding: 30px 30px 80px 30px;
+  padding: 100px 40px 40px 40px;
   position: fixed;
   top: 0;
   overflow-y: scroll;
+  width: 100dvw;
+  height: 100dvh;
 }
 
+.projects {
+  display: flex;
+  flex-direction: column;
+  row-gap: 12px;
+  box-shadow: 0 0 20px hsla(0, 0%, 0%, 0.2);
+  background-color: var(--white);
+  border-radius: var(--radius-hard);
+  padding: var(--spacing-s);
+  height: 90%;
+  overflow: scroll;
+  max-width: 500px;
+}
 
-.second a {
-  height: fit-content;
+.projects  > a {
+  display: flex;
+  height: 40px;
+  gap: 10px;
+  box-shadow: 0 0 20px hsla(0, 0%, 0%, 0.1);
+  background-color: var(--white);
+  border-radius: var(--radius-soft);
+  align-items: center;
+  transition: all .3s ease-in-out;
+  justify-content: space-between;
+  padding-right: var(--spacing-s);
+
+}
+
+.projects>a>div {
+  display: flex;
+  align-items: center;
+  gap: var(--spacing-s);
+}
+
+.projects > a:hover {
+  box-shadow: inset 0 0px 10px var(--highlight);
+  transition: all .3s ease-in-out;
+}
+
+.wip {
+  box-shadow: inset 0 0px 10px orange
 }
 
 .second a:hover {
   cursor: ne-resize;
 }
 
-.second span {
-  border: 1px solid #808080cc;
-  border-radius: 9999px;
-  padding: 0px 4px;
-  font-size: var(--font-small);
-  color: #808080cc;
-}
+.projects img {
+  width: auto;
+  height: 40px;
 
-.second img {
-  width: 100%;
   border-radius: 10px;
-  filter: blur(4px);
   transition: all .3s ease-in-out;
   aspect-ratio: 4/3;
   object-fit: cover;
 }
 
-.second a:hover>img {
-  filter: blur(0px);
+.projects span {
+  color: var(--highlight);
+  font-size: 80%;
+
+}
+
+.others{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: var(--spacing-s);
+  row-gap: var(--spacing-s);
+}
+
+.others img {
+  width: 100%;
+  height: auto;
+
+  border-radius: 10px;
   transition: all .3s ease-in-out;
+  aspect-ratio: 3/2;
+  object-fit: cover;
 }
 
-small {
-  display: flex;
-  align-items: baseline;
-  gap: 5px;
+.others a:hover{
+  opacity: .7;
 }
-
-
-
-
 /* -----------------------------------
-TABLES
+MO
 -------------------------------------- */
 td>a {
   text-decoration: underline;
