--- a/web-archive/assets/web-archive.css
+++ b/web-archive/assets/web-archive.css
@@ -66,7 +66,8 @@ td {
   border: 1px solid #80808040;
   backdrop-filter: blur(10px) saturate(100%);
   -webkit-backdrop-filter: blur(10px) saturate(100%);
-  background-color: rgba(255, 255, 255, 0.8)
+  background-color: rgba(255, 255, 255, 0.8);
+  box-shadow: 0 0 10px var(--highlight);
 }
 
 #back {
